--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "bulma": "^0.9.3",
+    "json-server": "^0.16.3",
+    "json-server-auth": "^2.1.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-icons": "^1.5.0",
